# creston-xsig-hassio

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  HOTFIX_IMPLEMENTATION_SUMMARY.md  LED_BINDING_IMPLEMENTATION_GUIDE.md  LICENSE  QUICK_FIX_GUIDE.md  README.md  RELEASE.md  RESTORE_ENTITY_PLAN.md  ROADMAP_ANALYSIS.md  ROADMAP_COMPARISON.md  TESTING_v1.6.0-alpha.1.md  UPDATED_ROADMAP.md  V1.6.0_READINESS_CHECK.md  hacs.json  info.md  pyproject.toml  requirements-dev.txt  v1.4.0_implementation_summary.txt  v1.5.0_ARCHITECTURE.txt  v1.5.0_EXACT_CHANGES.md  v1.5.0_IMPLEMENTATION_PLAN.md  v1.5.0_QUICK_REFERENCE.md  v1.5.0_README.md  v1.5.0_WHY_THIS_WORKS.md  v1.5.1_HOTFIX_INDEX.md  v1.5.1_HOTFIX_PLAN.md  v1.6.0_CONFIG_FLOW_PLAN.md
.claude/: project.md
.claude/commands/: check-joins.md  review-code.md  test-validation.md  update-version.md
.gitea/workflows/: release.yml
.github/workflows/: ci.yml  release.yml  validate.yml
blueprints/: README.md
blueprints/automation/: crestron_dimmer_button_controller.yaml
custom_components/crestron/: __init__.py  binary_sensor.py  changelog.md  climate.py  config_flow.py  config_flow.py.backup  const.py  cover.py  crestron.py  event.py  helpers.py  led_binding_manager.py  light.py  manifest.json  media_player.py  select.py  sensor.py  strings.json  switch.py
custom_components/crestron/config_flow/: __init__.py  base.py  dimmers.py  flow.py  joins.py  led_bindings.py  menus.py  validators.py
custom_components/crestron/config_flow/entities/: __init__.py  base.py  binary_sensor.py  climate.py  cover.py  light.py  media_player.py  sensor.py  switch.py
custom_components/crestron/translations/: en.json
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_crestron_xsig.py  test_light.py
